--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   "dependencies": {
     "assert": "^1.4.1",
     "body-parser": "^1.13.3",
+    "bootstrap": "^4.1.1",
     "cookie-parser": "^1.3.5",
     "debug": "~2.2.0",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
+    "jquery": "^1.9.1",
     "mongodb": "^2.2.35",
     "mongodb-express": "^1.0.1",
     "morgan": "^1.6.1",
+    "peer": "^0.2.8",
+    "popper.js": "^1.14.3",
     "serve-favicon": "^2.3.2"
   }
 }
