--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-express-first-app",
+  "name": "SAM_Application",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,15 +7,27 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
-    "body-parser": "^1.13.3",
-    "cookie-parser": "^1.3.5",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
-    "express": "^4.13.4",
+    "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-messages": "^1.0.1",
+    "express-mongoose": "^0.1.0",
+    "express-passport": "^0.1.0",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.2.0",
+    "flash": "^1.1.0",
     "git": "^0.1.5",
     "mongodb": "^2.2.35",
     "mongodb-express": "^1.0.1",
+    "mongoose": "^5.1.4",
     "morgan": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "peer": "^0.2.8",
     "popper.js": "^1.14.3",
     "serve-favicon": "^2.3.2"
