--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "SAM_Application",
-  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -21,6 +20,7 @@
     "express-validator": "^5.2.0",
     "flash": "^1.1.0",
     "git": "^0.1.5",
+    "jquery": "^3.3.1",
     "mongodb": "^2.2.35",
     "mongodb-express": "^1.0.1",
     "mongoose": "^5.1.4",
